2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/ldap_window.cpp: Check if a group already exists using
	the escaped gconf key.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/menu.cpp: Added Calls History to the tray menu.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* src/config.cpp: Fixed possible crash.
	
2003-06-17 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Moved ports related settings from
	the general section to the ports section. Added a key for the 
	Gatekeeper UDP port range.
	
	* src/common.h: Added the ports section to the keys.
	
	* src/config.cpp: Make sure old port ranges are upgraded to the
	new keys.
	
	* src/endpoint.cpp: Use new port ranges.
	
	* src/gnomemeeting-config-tool.in: Fixed messages.
	
	* src/ldap_window.cpp, src/ldap_window.h: Fixed problem for group
	names containing markup language. Thanks to Kilian for spotting this.
	
2003-06-16 Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Stop tones on key presses.
	
2003-06-16 Damien Sandras  <dsandras@seconix.com>

	* src/gatekeeper.cpp: Fixed bug when unregistering from a GK.
	
2003-06-16 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented to 0.97.9 as it is the 0.98 release.
	
	* src/callbacks.cpp, src/callbacks.h: Added hold_call_cb so that
	it can be used by the lid thread too. Removed unneeded 
	gtk_dialog_response_accept.

	* src/endpoint.cpp, src/endpoint.h: Removed unneeded OnForwardingCall.
	Display right IP address in addressbook. Display the URL instead
	of the pure IP.
	
	* src/ils.cpp: Limited the number of chars for the different fields
	to the maximum supported.
	
	* src/ldap_window.cpp: Changes so that gconf keys for group and server
	names are escaped before manipulation in gconf_* functions and
	unescaped before displaying.
	
	* src/lid.cpp: Various fixes, and added support for *1 *2 to
	hold and transfer calls.
	