@@ -1,5 +1,10 @@
 2003-06-17 Damien Sandras  <dsandras@seconix.com>
 
+	* src/ldap_window.cpp: Cleaned the API so that groups are always
+	passed in lowercase UTF-8, but unescaped, to functions.
+	
+2003-06-17 Damien Sandras  <dsandras@seconix.com>
+
 	* src/ldap_window.cpp: Check if a group already exists using
 	the escaped gconf key.
 	
